--- a/g2o/examples/demo/CMakeLists.txt
+++ b/g2o/examples/demo/CMakeLists.txt
@@ -6,3 +6,9 @@ add_executable(demo
 include_directories(${CHOLMOD_INCLUDE_DIR})
 
 target_link_libraries(demo core solver_cholmod types_slam3d)
+
+add_executable(demo_static
+    demo_static.cpp
+    types_static.cpp
+)
+target_link_libraries(demo_static core solver_cholmod types_slam3d)
